@startuml

package automata {
    class twa_graph_ptr << spot >> {}
    class formula << spot >> {}

    abstract Automaton {
        --type aliases--
        +using EdgeIterator = spot::internal::state_out<spot::digraph<spot::twa_graph_state, spot::twa_graph_edge_data>>
        +using Edge = spot::internal::edge_storage<unsigned, unsigned, unsigned, spot::internal::boxed_label<spot::twa_graph_edge_data>>
        --data members--
        #m_automaton: spot::twa_graph_ptr
        #m_name: std::string
        #m_automatonStats: std::shared_ptr<AutomatonStats>
        --constructors--
        +Automaton(std::string_view name)
        +Automaton(std::string_view name, spot::twa_graph_ptr automaton)
        +virtual ~Automaton() = default
        --member functions--
        +name(): std::string_view
        +virtual totalStates(): unsigned
        +virtual totalInitialStates(): unsigned
        +virtual totalAcceptingStates(): unsigned
        +virtual totalEdges(): unsigned
        +virtual isInitialState(unsigned state): bool
        +virtual isAcceptingState(unsigned state): bool
        +virtual successors(unsigned state): EdgeIterator
        +virtual hasSuccessors(unsigned state): bool
        +virtual countSuccessors(unsigned state): int
        +virtual twa(): spot::const_twa_graph_ptr
        +virtual acceptance() : AutomatonAcceptance
        +virtual transpose(): spot::twa_graph_ptr
        +virtual stats(): const AutomatonStats&
        +printDotFormat(std::ostream& os): void
        #virtual initialiseAutomaton(): void
        #virtual initialiseStats(): void
        #virtual setAutomatonStats(): void
        #virtual assertThatStateIsInRange(const unsigned state): void
    }

    Automaton --> "1" AutomatonAcceptance

    enum AutomatonAcceptance
    {
        buchi,
        nfa,
        allStatesAreAccepting
    }

    abstract PolyhedralLtlAutomaton
    {
        --type aliases--
        +using PolyhedralLtlAutomatonConstSharedPtr = std::shared_ptr<PolyhedralLtlAutomaton>
        -using RenumberingContextVoidPtr = void*
        --data members--
        #m_initialStates: std::unordered_set<unsigned>
        #m_acceptingStates: std::unordered_set<unsigned>
        #m_dummyInitialState: unsigned
        #m_dummyEdges: unsigned
        #m_stateDenotationById: std::unordered_map<unsigned, StateDenotation>
        #m_polyhedralSystemFormulaDenotationMap: PolyhedralSystemFormulaDenotationMap
        #m_automatonStats: AutomatonStats
        #m_polyhedralLtlAutomatonStats: std::shared_ptr<PolyhedralLtlAutomatonStats>
        #m_discreteLtlFormula: DiscreteLtlFormula
        #m_optimizationLevel: spot::postprocessor::optimization_level
        --constructors--
        #PolyhedralLtlAutomaton(const PolyhedralLtlAutomaton& other)
        #PolyhedralLtlAutomaton()
        #PolyhedralLtlAutomaton(std::string_view name, PolyhedralSystemFormulaDenotationMap&& polyhedralSystemLabelDenotationMap, const DiscreteLtlFormula& discreteLtlFormula)
        #PolyhedralLtlAutomaton(std::string_view name, PolyhedralSystemFormulaDenotationMap&& polyhedralSystemLabelDenotationMap, DiscreteLtlFormula&& discreteLtlFormula)
        --member functions--
        +virtual formula(): const DiscreteLtlFormula&
        +virtual optimizationLevel(): spot::postprocessor::optimization_level
        +virtual initialStates() : const std::unordered_set<int>&
        +virtual acceptingStates() : const std::unordered_set<int>&
        +stateDenotation(int state) : const StateDenotation&
        +spaceDimension(int state) : PPL::dimension_type
        +stats() : const PolyhedralLtlAutomaton&
        #buildAutomaton(const spot::const_twa_graph_ptr& nfa) : void
        #extractStateDenotationFromEdgeGuard(const spot::const_twa_graph_ptr& nfa, const bdd& guard) : StateDenotation
        #virtual createNewEdge(unsigned srcState, unsigned dstState): void
        #virtual isAcceptingEdge(const spot::const_twa_graph_ptr& graph, const Edge& edge): bool
        #virtual filterEdge(const spot::const_twa_graph_ptr& graph, const Edge& edge): bool
        #virtual purgeUnreachableStates(spot::twa_graph_ptr twaGraph) : void
        #virtual purgeUnreachableStates() : void
        #convertToNfa(spot::twa_graph_ptr tgba) : spot::twa_graph_ptr
        #eraseInitialEdgesWithEmptyDenotation(spot::twa_graph_ptr nf) : void
        #stateLabelsAsBdd(unsigned outEdgeState) : bdd
        #postprocessAutomaton() : void
        #createDummyInitialStateWithEdgesToInitialStates() : void
        #updatePatchStats(int totPatches) : void
        #setNfaStats(double executionTimeSeconds) : void
        #logNfaConstruction(double executionTimeSecond) : void
        #virtual spot::twa_graph_ptr translateDiscreteLtlFormulaIntoTgba(bool anyOption)
    }

    PolyhedralLtlAutomaton --|> Automaton
    PolyhedralLtlFiniteAutomaton --|> PolyhedralLtlAutomaton

    class PolyhedralSystemFormulaDenotationMap
    {
        --type aliases--
        -using FormulaToString = std::string;
        -using FormulaId = size_t;
        --data members--
        -m_polyhedralSystem : PolyhedralSystemSharedPtr
        -m_powersetByFormula : std::unordered_map<FormulaId, std::tuple<PowersetConstSharedPtr, FormulaToString>>
        --constructors--
        +PolyhedralSystemFormulaDenotationMap(PolyhedralSystemSharedPtr polyhedralSystem)
        +PolyhedralSystemFormulaDenotationMap(PolyhedralSystemFormulaDenotationMap&& other)
        +PolyhedralSystemFormulaDenotationMap(const PolyhedralSystemFormulaDenotationMap& other) = default
        -PolyhedralSystemFormulaDenotationMap() = default
        --member functions--
        +polyhedralSystem() : PolyhedralSystemConstSharedPtr
        +getOrComputeDenotation(const spot::formula& formula) : PowersetConstSharedPtr
        +containsDenotation(const spot::formula& formula) : bool
        -computeFormulaDenotation(const spot::formula& formula) : PowersetConstSharedPtr
        -getAtomInterpretation(const spot::formula& formula) : const AtomInterpretation*
        -void saveFormulaDenotation(const spot::formula& formula, PowersetConstSharedPtr denotation) : void
        --friends--
        friend class PolyhedralLtlAutomaton
        --operators--
        +operator<< (std::ostream& out, PolyhedralSystemFormulaDenotationMap& polyhedralSystemFormulaDenotationMap) : std::ostream&
    }

    class StateDenotation
    {
        --data members--
        -m_formula : spot::formula
        -m_denotation : PowersetConstSharedPtr
        -m_isSing : bool
        --constructors--
        +StateDenotation(spot::formula&& formula, PowersetConstSharedPtr denotation, const bool isSing = false)
        +StateDenotation(StateDenotation&& other)
        +StateDenotation(const StateDenotation& other)
        --member functions--
        +formula() : const spot::formula&
        +labels() : const spot::atomic_prop_set&
        +denotation() : PowersetConstSharedPtr
        +totalPatches() : int
        +isSingular() : bool
        +isUniverse() : bool
        +isEmpty() : bool
        +toString(const PolyhedralSystemSymbolTable& symbolTable) : std::string
        +print(std::ostream& ostream, const PolyhedralSystemSymbolTable& symbolTable) : void
    }

    struct RenumberingContext
    {
        --data members--
        m_initialStates : std::unordered_set<unsigned>*
        m_acceptingStates : std::unordered_set<unsigned>*
        m_stateDenotationById : std::unordered_map<unsigned, StateDenotation>*
        m_dummyInitialState : unsigned*
        --constructors--
        RenumberingContext(std::unordered_set<unsigned>* initialStates, std::unordered_set<unsigned>* acceptingStates, std::unordered_map<unsigned, StateDenotation>*, unsigned* dummyInitialState)
        explicit RenumberingContext(std::unordered_set<unsigned>* acceptingStates)
    }

    package finite
    {
        class PolyhedralLtlFiniteAutomaton
        {
            --type aliases--
            using PolyhedralLtlFiniteAutomatonConstSharedPtr = std::shared_ptr<const PolyhedralLtlFiniteAutomaton>
            --data members--
            m_polyhedralFiniteLtlAutomatonStats: std::shared_ptr<PolyhedralLtlFiniteAutomatonStats>
            -- constructors --
            +PolyhedralLtlFiniteAutomaton(const PolyhedralLtlFiniteAutomaton& other)
            #PolyhedralLtlFiniteAutomaton() = default
            #PolyhedralLtlFiniteAutomaton(const DiscreteLtlFormula&, PolyhedralSystemFormulaDenotationMap&&, std::string_view name)
            #PolyhedralLtlFiniteAutomaton(DiscreteLtlFormula&&, PolyhedralSystemFormulaDenotationMap&&, std::string_view name)
            --member functions--
            +acceptance() const override: AutomatonAcceptance
            +stats(): const PolyhedralLtlFiniteAutomatonStats&
            #convertToNfa(spot::twa_graph_ptr tgba): spot::twa_graph_ptr
            #setNfaStats((double executionTimeSecond): void
            -- static functions --
            {static} +buildAutomaton(
                 DiscreteLtlFormula&& discreteLtlFormula,
                 PolyhedralSystemFormulaDenotationMap&& polyhedralSystemLabelDenotationMap,
                 spot::postprocessor::optimization_level optimizationLevel = spot::postprocessor::optimization_level::High,
                 bool anyOption = false,
                 std::string_view name = "PolyhedralLtlFiniteAutomaton"
            ) : PolyhedralLtlFiniteAutomatonConstSharedPtr
            -- operators --
            +operator<< (out: std::ostream&, finiteLtlAutomaton: const FiniteLtlAutomaton&) : std::ostream&
        }

        package onthefly {
            class BackwardNFA
            {
                --constructors--
                +BackwardNFA(const BackwardNFA& other);
                #BackwardNFA(const DiscreteLtlFormula& discreteLtlFormula, PolyhedralSystemFormulaDenotationMap&& polyhedralSystemLabelDenotationMap, std::string_view name)
                #BackwardNFA(DiscreteLtlFormula&& discreteLtlFormula, PolyhedralSystemFormulaDenotationMap&& polyhedralSystemFormulaDenotationMap, std::string_view name)
                --member functions--
                -createDummyInitialStateWithEdgesToReachableAcceptingStates() : void
                --friends--
                -friend class BackwardNFADepthFirstSearch
                -friend class BackwardNFAPermutator
                --operators--
                +operator<< (std::ostream& out, const BackwardNFA& backwardNfa) : std::ostream&
            }

            class BackwardNFADepthFirstSearch
            {
                --data members--
                -m_backwardNfa : const BackwardNFA*
                --constructors--
                +explicit BackwardNFADepthFirstSearch(const BackwardNFA& backwardNfa)
                --virtual member functions--
                +virtual wantState(unsigned state) const : bool
                +virtual processState(unsigned state) : void
                +virtual processEdge(unsigned src, unsigned dst) : void
                --member functions--
                +run() final: void
                -want_state(const spot::state* state) const final : bool
                -process_state(const spot::state* s, int n, spot::twa_succ_iterator* si) final : void
                -process_link(
                    const spot::state* in_s,
                    int in,
                    const spot::state* out_s,
                    int out,
                    const spot::twa_succ_iterator* si
                ) final : void
                -push(const spot::state* s, int sn) final : void
                -pop() final : void
            }

            class twa_reachable_iterator_depth_first << spot >>
            {
              --data members--
              #const_twa_ptr aut_
              #state_map<int> seen
              #std::deque<stack_item> todo
              --constructors--
              +twa_reachable_iterator_depth_first(const const_twa_ptr& a)
              --virtual destructors--
              +virtual ~twa_reachable_iterator_depth_first()
              --virtual member functions--
              +virtual run() : void
              +virtual want_state(const state* s) : bool
              +virtual start() : void
              +virtual end() : void
              +virtual process_state(const state* s, int n, twa_succ_iterator* si) : void
              +virtual process_link(
                const state* in_s, int in,
                const state* out_s, int out,
                const twa_succ_iterator* si
              ) : void
              #virtual push(const state* s, int sn) : void
              #virtual pop() : void
            }

            struct stack_item << spot >>
            {
              --data members--
              src : const state*
              src_n : int
              it : twa_succ_iterator*
            }

            class BackwardNFAPermutator
            {
                --data members--
                -m_backwardNfa : const BackwardNFA&
                --constructors--
                +explicit BackwardNFAPermutator(const BackwardNFA& backwardNfa)
                --member functions--
                +generatePermutations(const std::unordered_set<int>& states) const : PermutedBackwardNFAIterator
                +swapStates(const std::unordered_map<int, int>& swapStateMap) const : std::unique_ptr<BackwardNFA>
                -swapStates(const std::unordered_map<int, int>& swapStateMap, bool checkSwap) const : std::unique_ptr<BackwardNFA>
                -checkSwapStateMapValidity(const std::unordered_map<int, int>& swapStateMap) const : void
                -checkStates(const std::unordered_set<int>& states) const : void
                --static functions--
                -{static} replacingState(int state, const std::unordered_map<int, int>& swapStateMap, const std::unordered_map<int, int>& inverseSwapStateMap) : int
                -{static} invertSwapStateMap(const std::unordered_map<int, int>& swapStateMap) : std::unordered_map<int, int>
            }

            class PermutedBackwardNFAIterator
            {
                --public types--
                +value_type : BackwardNFA
                +pointer : BackwardNFA*
                +reference : value_type&
                +iterator_category : std::bidirectional_iterator_tag
                +difference_type : std::ptrdiff_t
                --constructors--
                +PermutedBackwardNFAIterator(const PermutedBackwardNFAIterator& other)
                -explicit PermutedBackwardNFAIterator(const BackwardNFAPermutator& backwardNfaPermutator, std::vector<int> states)
                --data members--
                -m_backwardNfaPermutator : const BackwardNFAPermutator&
                -m_permutedStates : std::vector<int>
                -m_originalStates : std::vector<int>
                -m_permutedBackwardNfa : std::unique_ptr<BackwardNFA>
                -m_permutationMap : std::unordered_map<int, int>
                -m_totalPermutations : int
                -m_end : std::unique_ptr<PermutedBackwardNFAIterator>
                -m_isEnd : bool
                --operators--
                +operator* () const : const BackwardNFA&
                +operator++ () : PermutedBackwardNFAIterator&
                +operator++ (int) : PermutedBackwardNFAIterator
                +operator-- () : PermutedBackwardNFAIterator&
                +operator-- (int) : PermutedBackwardNFAIterator
                +operator== (const PermutedBackwardNFAIterator& other) const : bool
                +operator!= (const PermutedBackwardNFAIterator& other) const : bool
                +begin() const : PermutedBackwardNFAIterator
                +end() const : PermutedBackwardNFAIterator
                --member functions--
                +totalPermutations() const : int
                +permutationMap() : const std::unordered_map<int, int>&
                -nextPermutedBackwardNfa() : void
                -prevPermutedBackwardNfa() : void
                -createPermutationMap() const : std::unordered_map<int, int>
                -PermutedBackwardNFAIterator& operator= (const PermutedBackwardNFAIterator& other)
                --static functions--
                {static} factorial(int n): long
                --friends--
                -friend class BackwardNFAPermutator
            }

            BackwardNFA --|> PolyhedralLtlFiniteAutomaton
            BackwardNFAPermutator "1" *-- "1" PermutedBackwardNFAIterator
            BackwardNFAPermutator *--> "1" BackwardNFA
            twa_reachable_iterator_depth_first #--> "*" stack_item
            BackwardNFADepthFirstSearch --|> twa_reachable_iterator_depth_first
        }

        package büchi {
            class PolyhedraliLtlBüchiAutomaton
            {
                --type aliases--
                using PolyhedraliLtlBüchiAutomatonConstSharedPtr = std::shared_ptr<const PolyhedraliLtlBüchiAutomaton>
                -- constructors --
                +PolyhedraliLtlBüchiAutomaton(const PolyhedraliLtlBüchiAutomaton& other)
                #PolyhedraliLtlBüchiAutomaton() = default
                #PolyhedraliLtlBüchiAutomaton(const DiscreteLtlFormula&, PolyhedralSystemFormulaDenotationMap&&, std::string_view name)
                #PolyhedraliLtlBüchiAutomaton(DiscreteLtlFormula&&, PolyhedralSystemFormulaDenotationMap&&, std::string_view name)
                --member functions--
                +acceptance() const: AutomatonAcceptance
                #convertToNfa(spot::twa_graph_ptr tgba): spot::twa_graph_ptr
                #setNfaStats((double executionTimeSecond): void
                -- static functions --
                {static} +buildAutomaton(
                     DiscreteLtlFormula&& discreteLtlFormula,
                     PolyhedralSystemFormulaDenotationMap&& polyhedralSystemLabelDenotationMap,
                     spot::postprocessor::optimization_level optimizationLevel = spot::postprocessor::optimization_level::High,
                     bool anyOption = false,
                     std::string_view name = "PolyhedraliLtlBüchiAutomaton"
                ) : PolyhedraliLtlBüchiAutomatonConstSharedPtr
            }
        }

        PolyhedralLtlAutomaton #--> RenumberingContext
        PolyhedralLtlFiniteAutomaton *--> "*" StateDenotation
        PolyhedralLtlFiniteAutomaton --|> PolyhedralLtlAutomaton
        PolyhedralLtlFiniteAutomaton --> "1" PolyhedralSystemFormulaDenotationMap
        PolyhedralLtlFiniteAutomaton --> "1" twa_graph_ptr
        PolyhedralLtlFiniteAutomaton --> "1" formula
        PolyhedralLtlAutomaton --|> Automaton
    }
}
@enduml
